--- a/android/components/box-module/main/build.gradle
+++ b/android/components/box-module/main/build.gradle
@@ -22,9 +22,7 @@ android {
     defaultConfig {
         resValue "string", "app_name","box.app"
     }
-//    sourceSets{
-//        main.jniLibs.srcDirs +="${project.projectDir}/main/jniLibs"
-//    }
+
     packagingOptions {
         exclude 'META-INF/proguard/coroutines.pro'
         pickFirst 'lib/armeabi-v7a/libc++_shared.so'
@@ -35,6 +33,10 @@ android {
         pickFirst 'lib/arm64-v8a/libfbjni.so'
         pickFirst 'lib/x86/libfbjni.so'
         pickFirst 'lib/x86_64/libfbjni.so'
+        pickFirst 'lib/armeabi-v7a/libicu_common.so'
+        pickFirst 'lib/arm64-v8a/libicu_common.so'
+        pickFirst 'lib/x86/libicu_common.so'
+        pickFirst 'lib/x86_64/libicu_common.so'
     }
 }
 
