--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -10,6 +10,7 @@ pluginManagement {
         maven { url "https://raw.githubusercontent.com/PGYER/analytics/master" }  //备用仓库（主力仓库下载不下来使用）
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url "https://maven.aliyun.com/repository/public" }
+        maven { url "https://jitpack.io" }
         gradlePluginPortal()
         maven { url "https://plugins.gradle.org/m2/" }
 //        maven{ url "https://dl.bintray.com/kotlin/kotlin-eap"}
@@ -32,6 +33,7 @@ dependencyResolutionManagement {
         maven { url "https://raw.githubusercontent.com/PGYER/analytics/master" }  //备用仓库（主力仓库下载不下来使用）
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url "https://maven.aliyun.com/repository/public" }
+        maven { url "https://jitpack.io" }
         gradlePluginPortal()
         maven { url "https://plugins.gradle.org/m2/" }
 //        maven { url "https://plugins.gradle.org/m2/" }
