--- a/android/components/account-module/main/build.gradle
+++ b/android/components/account-module/main/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id "io.github.jamesfchen.app-plugin"
-    id 'io.github.jamesfchen.counter-plugin'
+//    id 'io.github.jamesfchen.counter-plugin'
 }
 apply from: "$rootDir/script/app_config.gradle"
 apply from: "${rootDir.path}/script/ui_tradition.gradle"
-counterConfig {
-    pickupModules = [':components:account-module:export', ':components:account-module:impl']
-}
+//counterConfig {
+//    pickupModules = [':components:account-module:export', ':components:account-module:impl']
+//}
 android {
     defaultConfig {
         resValue "string", "app_name", "account.app"
