--- a/android/script/ui_tradition.gradle
+++ b/android/script/ui_tradition.gradle
@@ -39,7 +39,7 @@ dependencies{
 
     //animotor
     api 'com.airbnb.android:lottie:3.2.2'
-//    api 'com.github.Almeros:android-gesture-detectors:v1.0'
+    api 'com.github.Almeros:android-gesture-detectors:v1.0'
 
     //rx ui
     api 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0'
