--- a/android/components/home-module/build.gradle
+++ b/android/components/home-module/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     compileOnly project.moduleify('framework-loader')
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    api 'com.theartofdev.edmodo:android-image-cropper:'
+    implementation 'top.zibin:Luban:1.1.8'
 }
