--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     project.depsConfig("implementation", "im-chatroom")
     project.depsConfig("implementation", "hotel-foundation")
     project.depsConfig("implementation", "update-appupdate")
-    implementation project.moduleify("framework-baseui")
+    implementation project.moduleify("framework-base")
     implementation project.moduleify("framework-loader")
     implementation project.moduleify("framework-network")
     implementation project.moduleify("framework-av")
