--- a/android/components/account-module/main/build.gradle
+++ b/android/components/account-module/main/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     project.depsConfig("implementation", "account-foundation")
     project.depsConfig("implementation", "account-export")
 
-    implementation project.moduleify("framework-baseui")
+    implementation project.moduleify("framework-base")
     implementation project.moduleify("framework-network")
     implementation project.moduleify("framework-common")
 }
