--- a/android/components/hotel-module/bundle1/build.gradle
+++ b/android/components/hotel-module/bundle1/build.gradle
@@ -11,7 +11,7 @@ android {
 dependencies {
     implementation project.moduleify("hotel-foundation")
     compileOnly project.moduleify('framework-common')
-    implementation project.moduleify('framework-baseui')
+    implementation project.moduleify('framework-base')
     compileOnly project.moduleify('framework-image')
     compileOnly project.moduleify('framework-network')
     compileOnly project.moduleify('framework-storage')
