--- a/android/components/hotel-module/bundle2/build.gradle
+++ b/android/components/hotel-module/bundle2/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     implementation 'com.facebook.device.yearclass:yearclass:2.1.0'
     implementation project.moduleify("hotel-foundation")
     compileOnly project.moduleify('framework-common')
-    implementation project.moduleify('framework-baseui')
+    implementation project.moduleify('framework-base')
     compileOnly project.moduleify('framework-image')
     compileOnly project.moduleify('framework-network')
     compileOnly project.moduleify('framework-storage')
