--- a/android/framework/base/build.gradle
+++ b/android/framework/base/build.gradle
@@ -1,6 +1,11 @@
 plugins{
     id "io.github.jamesfchen.foundation-plugin"
 }
+android{
+    buildFeatures {
+        viewBinding true
+    }
+}
 dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
