--- a/android/framework/base/src/main/AndroidManifest.xml
+++ b/android/framework/base/src/main/AndroidManifest.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.jamesfchen.base">
+
+    <application>
+        <activity android:name="com.jamesfchen.av.AvRecorderActivity" />
+        <service
+            android:name="com.jamesfchen.av.AvRecorderService"
+            android:foregroundServiceType="mediaProjection" />
+        <activity
+            android:name="com.jamesfchen.av.VideoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:supportsPictureInPicture="true" />
+        <!--            android:theme="@style/VideoTheme" -->
+    </application>
 </manifest>
