--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,6 +22,6 @@ jobs:
     - name: change android dir
       run: cd  android
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: pwd && chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
