--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,6 +22,6 @@ jobs:
     - name: change android dir
       run: cd  android
     - name: Grant execute permission for gradlew
-      run: pwd && chmod +x gradlew
+      run: cd  android && chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: cd  android && ./gradlew build
