--- a/android/components/update-module/appupdate/build.gradle
+++ b/android/components/update-module/appupdate/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     implementation "com.liulishuo.okdownload:okdownload:1.0.7"
     implementation "com.liulishuo.okdownload:sqlite:1.0.7"
     implementation "com.liulishuo.okdownload:okhttp:1.0.7"
+    implementation project.moduleify("framework-base")
 }
