--- a/android/components/account-module/export/build.gradle
+++ b/android/components/account-module/export/build.gradle
@@ -2,5 +2,6 @@ plugins {
     id "io.github.jamesfchen.api-plugin"
 }
 dependencies {
-    api "org.jetbrains.kotlin:kotlin-stdlib:${KOTLIN_VERSION}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${KOTLIN_VERSION}"
+    implementation 'androidx.annotation:annotation:1.3.0'
 }
