--- a/android/framework/base/build.gradle
+++ b/android/framework/base/build.gradle
@@ -16,5 +16,6 @@ dependencies {
     implementation project.moduleify("framework-storage")
     api 'com.pgyersdk:sdk:3.0.10'
     api 'com.pgyer:analytics:4.2.1'//最好写上具体依赖的版本号 如：4.2.1
+    api  'io.github.jamesfchen:retrofit:1.0.0'
 }
 
