--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,13 +29,13 @@ jobs:
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
         # Or use mhausenblas/mkdocs-deploy-gh-pages@nomaterial to build without the mkdocs-material theme
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # CUSTOM_DOMAIN: optionaldomain.com
-          CONFIG_FILE: folder/mkdocs.yml
-          EXTRA_PACKAGES: build-base
-          # GITHUB_DOMAIN: github.myenterprise.com
-          REQUIREMENTS: folder/requirements.txt
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   # CUSTOM_DOMAIN: optionaldomain.com
+        #   CONFIG_FILE: folder/mkdocs.yml
+        #   EXTRA_PACKAGES: build-base
+        #   # GITHUB_DOMAIN: github.myenterprise.com
+        #   REQUIREMENTS: folder/requirements.txt
   
   
   
