--- a/.github/workflows/pisces.yml
+++ b/.github/workflows/pisces.yml
@@ -37,7 +37,7 @@ jobs:
           # CONFIG_FILE: folder/mkdocs.yml
           # EXTRA_PACKAGES: build-base
           # # GITHUB_DOMAIN: github.myenterprise.com
-          # REQUIREMENTS: folder/requirements.txt
+          REQUIREMENTS: requirements.txt
   
   
   
