--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 #python3 -m mkdocs serve
 #python3 install -r requirements.txt
 mkdocs-static-i18n >= 0.53
+mkdocs                  >=   1.4.2
+mkdocs-material          >=  9.0.3
+mkdocs-material-extensions >= 1.1.1
