--- a/android/components/box-module/main/build.gradle
+++ b/android/components/box-module/main/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     api 'androidx.databinding:databinding-runtime:7.2.1'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
     project.depsConfig("implementation", "box-tool")
+    implementation project.moduleify('framework-base')
 }
