--- a/android/framework/base/build.gradle
+++ b/android/framework/base/build.gradle
@@ -9,13 +9,50 @@ android{
 dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation project.moduleify("framework-common")
-    implementation project.moduleify("framework-network")
+    api project.moduleify("framework-common")
     implementation project.moduleify("framework-av")
     implementation project.moduleify("framework-image")
     implementation project.moduleify("framework-storage")
     api 'com.pgyersdk:sdk:3.0.10'
     api 'com.pgyer:analytics:4.2.1'//最好写上具体依赖的版本号 如：4.2.1
     api  'io.github.jamesfchen:retrofit:1.0.0'
+    api "io.github.jamesfchen:react-native:0.70.5-SNAPSHOT"
+
+    testImplementation files('libs/jsoup-1.12.1.jar')
+//    api project(path: ':framework:common')
+//    api project(path: ':mockserver')
+//    api 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
+    //    api 'com.android.volley:volley:1.1.1'
+    api "com.squareup.okhttp3:okhttp-tls:${OKHTTP_TLS_VERSION}"
+    api "com.facebook.stetho:stetho-okhttp3:${OKHTTP_STETHO_VERSION}"
+    api "com.squareup.okhttp3:logging-interceptor:${OKHTTP_LOGGING_VERSION}"
+    testImplementation 'com.squareup.okhttp3:okhttp-dnsoverhttps:4.0.1'
+    /*
+    >>>> http style  start
+    */
+
+    //restful
+//    api "com.squareup.retrofit2:adapter-rxjava3:${RETROFIT_VERSION}"
+//    api "com.squareup.retrofit2:converter-wire:${RETROFIT_VERSION}"
+//    api "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
+//    api "com.squareup.retrofit2:converter-moshi:2.9.0"
+//    api "com.squareup.retrofit2:converter-protobuf:2.9.0"
+    //rpc
+//    api("io.grpc:grpc-protobuf-lite:${rootProject.ext.grpcVersion}") {//存在依赖冲突
+//        exclude group:  'com.google.guava'
+//        exclude group: 'com.google.protobuf', module: 'protobuf-java'
+//    }
+//    api "io.grpc:grpc-okhttp:${rootProject.ext.grpcVersion}"
+//    api "io.grpc:grpc-stub:${rootProject.ext.grpcVersion}"
+
+    /*
+      http style  end
+    */
+
+    kapt "com.google.dagger:dagger-compiler:2.16"
+//    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+//    implementation "com.github.jnr:jnr-unixsocket:0.23"
+    api "com.google.android.gms:play-services-cronet:${CRONET_VERSION}"
+    implementation project.moduleify("framework-common")
 }
 
