--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,7 +93,8 @@ nav:
     - 'Index': README.md
     - 'Cross-Platform': cross_platform.md
   - 'Architecture':
-    - 'Index': arch/index.md
+    - 'Design Patterns': arch/design_patterns.md
+    - 'Module Evolution': arch/module_evolution.md
     - 'Dynamic': arch/dynamic.md
   - 'Performance':
     - 'Index': perf/index.md
