--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -112,7 +112,7 @@ nav:
 extra:
   analytics:
     provider: google
-    property: G-2ZXZRNNRM5
+    property: G-D3NV00XZQW
     feedback:
         title: Was this page helpful?
         ratings:
