--- a/vi/gradle.properties
+++ b/vi/gradle.properties
@@ -22,6 +22,7 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 groupId =io.github.jamesfchen
+ndkVersion = 22.0.7026061
 compileSdkVersion = 30
 buildToolsVersion = 30.0.2
 #19:kk,21:L,23:M,24:N,26:O,28:P,29:Q,30:R
