--- a/android/components/hotel-module/bundle2/build.gradle
+++ b/android/components/hotel-module/bundle2/build.gradle
@@ -3,7 +3,8 @@ plugins {
 }
 apply from: "${rootDir.path}/script/ui_tradition.gradle"
 android {
-    defaultConfig {
+    buildFeatures {
+        viewBinding true
     }
 }
 dependencies {
