--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,6 +75,8 @@ android {
      */
 }
 dependencies {
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     project.depsConfig("implementation", "hotel-bundle1")
     project.depsConfig("implementation", "hotel-bundle2")
     project.depsConfig("implementation", "home-module")
