--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ mkdocs-static-i18n >= 0.53
 mkdocs                  >=   1.4.2
 mkdocs-material          >=  9.0.3
 mkdocs-material-extensions >= 1.1.1
+mkdocs-rss-plugin >= 1.6.0
