--- a/android/components/home-module/src/main/AndroidManifest.xml
+++ b/android/components/home-module/src/main/AndroidManifest.xml
@@ -4,7 +4,11 @@
     package="com.jamesfchen.myhome">
 
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
-
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.opengles.aep" android:required="true" />
+    <uses-feature android:glEsVersion="0x00030001" android:required="true" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
     <application>
         <activity
             android:name=".MainActivity"
