--- a/android/components/home-module/src/main/cpp/y/CMakeLists.txt
+++ b/android/components/home-module/src/main/cpp/y/CMakeLists.txt
@@ -1,3 +1,4 @@
 file(GLOB_RECURSE source_files "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
 add_library(y SHARED ${source_files})
-target_link_libraries(y log GLESv3.1)
+#GLESv3.1
+target_link_libraries(y log)
