--- a/android/components/home-module/build.gradle
+++ b/android/components/home-module/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "io.github.jamesfchen.bundle-plugin"
+    id 'org.jetbrains.kotlin.android'
 }
 apply from: "$rootDir/script/ui_tradition.gradle"
 android {
