--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -17,6 +17,8 @@ pluginManagement {
 //        maven{ url "https://dl.bintray.com/kotlin/kotlin-eap"}
     }
     plugins {
+        id 'org.jetbrains.kotlin.android' version '1.8.20'
+
 //        id 'com.android.library' version '7.0.2'
 //        id 'org.jetbrains.kotlin.android' version '1.6.21'
     }
