--- a/android/base/build.gradle
+++ b/android/base/build.gradle
@@ -1,7 +1,8 @@
 plugins{
     id "io.github.jamesfchen.foundation-plugin"
-    id("com.google.devtools.ksp") version "1.5.30-1.0.0"
+    id("com.google.devtools.ksp") version "1.7.10-1.0.6"
 }
+apply from: "${rootDir}/script/ui_tradition.gradle"
 android{
     defaultConfig {
         externalNativeBuild {
@@ -223,7 +224,7 @@ dependencies {
      */
     //crash and anr
     api 'com.tencent.bugly:nativecrashreport:3.7.1'
-    api 'com.tencent.bugly:crashreport:3.0.0'
+    api 'com.tencent.bugly:crashreport:3.4.4'
     def matrixModules = [
             "matrix-commons",
             "matrix-battery-canary",
@@ -282,7 +283,6 @@ dependencies {
     kapt "io.realm:realm-annotations-processor:${REALM_VERSION}"
 
     //firebase database
-    api platform("com.google.firebase:firebase-bom:$FIREBASE_VERSION")
     api 'com.google.firebase:firebase-database'
     api 'com.google.firebase:firebase-firestore'
     api 'com.google.firebase:firebase-storage'
