--- a/vi/vi-api/src/main/AndroidManifest.xml
+++ b/vi/vi-api/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.vi">
-
+    xmlns:tools="http://schemas.android.com/tools">
+    <uses-sdk tools:overrideLibrary="lab.galaxy.dlfunc"/>
+<!--    <application android:appComponentFactory=".MyCoreComponentFactory" tools:replace="android:appComponentFactory">-->
+    <application>
+        <profileable android:shell="true"/>
+    </application>
 </manifest>
