--- a/vi/vi-api/build.gradle
+++ b/vi/vi-api/build.gradle
@@ -7,7 +7,50 @@ publish {
     website = "https://github.com/big-frontend/pisces"
 }
 apply from: "$rootDir/aar.gradle"
+android {
+    namespace = "com.jamesfchen.vi"
+//    ndkVersion  = "25.0.8775105"
+    defaultConfig {
+//        externalNativeBuild {
+//            cmake {
+//                // issue:No compatible library found for //fbjni/fbjni Rejected the following libraries:
+//                // The issue is that apps are configured to use the static STL by default. You cannot link against both the static and shared STL so you need to change your app to use the shared STL.
+//                // 解决方案加入 arguments "-DANDROID_STL=c++_shared"
+//                arguments += listOf(
+//                    "-DANDROID_STL=c++_shared",
+//                    "-DANDROID_TOOLCHAIN=clang",
+//                    "-DANDROID_ARM_NEON=TRUE"
+//                )
+//                cFlags += listOf("-D__STDC_FORMAT_MACROS")
+//                //https://zhuanlan.zhihu.com/p/72475595
+//                cppFlags += listOf(
+//                    "-s"/*去除so lib 的符号表（libguard shrink之后的size2139k -->283k 7倍）*/,
+//                    "-fvisibility=hidden",
+//                    "-ffunction-sections",
+//                    "-fdata-sections",
+//                    "-std=c++14"
+//                )
+//                abiFilters += listOf("arm64-v8a", "armeabi-v7a")
+//            }
+//        }
+    }
+//    externalNativeBuild {
 
+    // Encapsulates your CMake build configurations.
+//        cmake {
+//
+//            // Provides a relative path to your CMake build script.
+//            path = file("CMakeLists.txt")
+//        }
+//    }
+    buildFeatures {
+        prefab = true
+        prefabPublishing = true
+    }
+    packagingOptions {
+        jniLibs.excludes.add("**/libdlfunc.so")
+    }
+}
 dependencies {
     implementation 'androidx.annotation:annotation:1.3.0'
     testImplementation 'junit:junit:4.+'
@@ -21,4 +64,5 @@ dependencies {
     api "io.github.jamesfchen:lifecycle-api:1.1.0"
     lintPublish project(path: ':vi-lint-rules')
     implementation project(path: ':vi-lint-rules')
+    implementation("io.github.rk700:dlfunc:0.1.1")
 }
